--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
+theme: minima
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-feed
