--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Mark's Portfolio
+
+repository: f03n1x/f03n1x.github.io
+
 email: mark.manson.work@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
