--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,10 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-midnight
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-feed
-
+  - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
