--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Mark's Portfolio
 
-repository: f03n1x/f03n1x.github.io
+#repository: f03n1x/f03n1x.github.io
 
 email: mark.manson.work@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -35,7 +35,6 @@ github_username:  jekyll
 # Build settings
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
-  - jekyll-feed
   - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
