--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Mark's Portfolio
 
-#repository: f03n1x/f03n1x.github.io
+repository: f03n1x/f03n1x.github.io
 
 email: mark.manson.work@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
