--- a/_config.yml
+++ b/_config.yml
@@ -24,14 +24,11 @@ repository: f03n1x/f03n1x.github.io
 
 email: mark.manson.work@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  VR and Game Programmer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://markmanson.co.nz" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
-
 # Build settings
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
